# foldercreature

./: .gitignore  CMakeLists.txt  creature.cpp  creature.h  ecosystem.cpp  ecosystem.h  go  grass.cpp  grass.h  grassfield.cpp  grassfield.h  life.cpp  life.h  living.cpp
Cage/1/: oogabooga.creature
include/: creature.h  ecosystem.h  grass.h  grasseater.h  grassfield.h  life.h
src/: creature.cpp  ecosystem.cpp  grass.cpp  grasseater.cpp  grassfield.cpp  life.cpp  living.cpp
